--- a/posts/.htaccess
+++ b/posts/.htaccess
@@ -2,3 +2,4 @@ Options +Indexes
 AddDescription "I switched to NixOS" "i-switched-to-nixos.html" #Mon, 08 Aug 2022 16:11:59 +0530
 AddDescription "Why Linux?" "why-linux.html" #Fri, 16 Apr 2021 03:37:04 +0530
 AddDescription "Starting a Blog" "starting-a-blog.html" #Sun, 21 Feb 2021 22:42:38 +0530
+AddDescription "A HomeLab Appeared!" "a-homelab-appeared.html" #Sun, 07 Jan 2024 20:14:35 +0530
